--- a/Poppool/Poppool/Resource/Info.plist
+++ b/Poppool/Poppool/Resource/Info.plist
@@ -50,5 +50,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>앱이 사용자의 현재 위치를 확인하기 위해 위치 권한이 필요합니다</string>
+	<key>CFBundleIdentifier</key>
+	<string></string>
 </dict>
 </plist>
