--- a/Poppool/Poppool/Resource/Info.plist
+++ b/Poppool/Poppool/Resource/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>사진을 선택하거나 저장하기 위해 사진 라이브러리에 접근합니다.</string>
 	<key>NSCameraUsageDescription</key>
