[FIX]: 어드민 레지스터뷰컨트롤러 UI 수정 맵뷰컨트롤러 Unable 레이아웃 이슈 수정

--- a/Poppool/Poppool/Resource/Info.plist
+++ b/Poppool/Poppool/Resource/Info.plist
@@ -60,5 +60,7 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>앱이 사용자의 현재 위치를 확인하기 위해 위치 권한이 필요합니다</string>
+	<key></key>
+	<string></string>
 </dict>
 </plist>
