[FEAT]: 찾아가는길 업데이트

--- a/Poppool/Poppool/Resource/Info.plist
+++ b/Poppool/Poppool/Resource/Info.plist
@@ -13,6 +13,9 @@
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>instagram</string>
+		<string>nmap</string>
+		<string>kakaomap</string>
+		<string>tmap</string>
 	</array>
 	<key>CFBundleURLTypes</key>
 	<array>
@@ -60,7 +63,5 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>앱이 사용자의 현재 위치를 확인하기 위해 위치 권한이 필요합니다</string>
-	<key></key>
-	<string></string>
 </dict>
 </plist>
