--- a/Poppool/Poppool/Resource/Strings/Terms.plist
+++ b/Poppool/Poppool/Resource/Strings/Terms.plist
@@ -186,5 +186,94 @@
 부칙 - &quot;- 공고일자 : 2025.02.01
 - 시행일자 : 2025.02.01&quot;
 </string>
+    <key>Terms4</key>
+    <string>제 1조 (목적)    
+1항    본 약관은 팝풀(이하 "팝풀")가 운영, 제공하는 위치기반서비스(이하 "서비스")를 이용함에 있어 회사와 고객 및 개인위치정보주체의 권리, 의무 및 책임사항에 따른 이용조건 및 절차 등 기본적인 사항을 규정함을 목적으로 합니다.
+
+제 2조 (이용약관의 효력 및 변경)
+1항    "1. 본 약관은 서비스를 신청한 고객 또는 개인위치정보주체가 본 약관에 동의하고 팝풀이 정한 소정의 절차에 따라 서비스의 이용자로 등록함으로써 효력이 발생합니다.
+2. 회원이 온라인에서 본 약관의 동의하기 버튼을 클릭하였을 경우 본 약관의 내용을 모두 읽고 이를 충분히 이해하였으며, 그 적용에 동의한 것으로 봅니다.
+3. 팝풀은 위치정보의 보호 및 이용 등에 관한 법률, 콘텐츠산업 진흥법, 전자상거래 등에서의 소비자보호에 관한 법률, 소비자 기본법 약관의 규제에 관한 법률 등 관련 법령을 위배하지 않는 범위에서 본 약관을 변경할 수 있습니다.
+4. 팝풀이 약관을 변경할 경우에는 공지사항 또는 별도의 창을 통하여 변경내용 및 변경 이유를 명시하여 지체없이 공지하고, 개정 내용이 이용자에게 불리한 경우에는 그 적용일자 30일 전부터 적용일 이후 상당한 기간 동안 각각 이를 서비스 홈페이지에 게시하거나 이용자에게 전자적 형태(전자우편, SMS 등)로 약관 개정 사실을 발송하여 고지합니다.
+5. 팝풀이 전항에 따라 회원에게 통지하면서 공지일로부터 적용일 7일 후까지 거부의사를 표시하지 아니하면 개정 약관에 승인한 것으로 간주합니다. 회원이 개정 약관에 동의하지 않을 경우 회원은 이용계약을 해지할 수 있습니다."
+
+제 3조 (관계법령의 적용)
+본 약관은 신의성실의 원칙에 따라 공정하게 적용하며, 본 약관에 명시되지 아니한 사항에 대하여는 관계법령 또는 상관례에 따릅니다.
+
+제 4조 (서비스의 내용 등)
+"회사가 제공하는 위치기반서비스 및 개인위치정보의 보유목적과 기간은 아래와 같습니다.
+- 위치정보를 활용한 검색결과 제공 서비스 : 개인위치정보주체의 위치 정보를 제공 시 본 위치정보를 이용한 검색결과 및 주변결과를 제시(이용 목적 달성 시, 즉시 파기)"
+제 5조 (서비스 내용 변경 통지)
+"1. 회사가 서비스 내용을 변경하거나 종료하는 경우 회사는 등록된 전자우편 주소로 이메일을 통하여 서비스 내용의 변경 사항 또는 종료를 통지할 수 있습니다.2. 1항의 경우 불특정 다수인을 상대로 통지를 함에 있어서는 웹사이트 등 기타 회사의 공지사항을 통하여 회원에게 통지할 수 있습니다."
+
+제 6조 (서비스 이용의 제한 및 중지)
+"1. 회사는 아래 각 호의 1에 해당하는 사유가 발생한 경우에는 회원의 서비스 이용을 제한하거나 중지시킬 수 있습니다.
+  - 회원이 회사 서비스의 운영을 고의 또는 중과실로 방해하는 경우
+  - 서비스용 설비 점검, 보수 또는 공사로 인하여 부득이한 경우
+  - 전기통신사업법에 규정된 기간통신사업자가 전기통신 서비스를 중지했을 경우
+  - 국가비상사태, 서비스 설비의 장애 또는 서비스 이용의 폭주 등으로 서비스 이용에 지장이 있는 때
+  - 기타 중대한 사유로 인하여 회사가 서비스 제공을 지속하는 것이 부적당하다고 인정하는 경우
+2. 회사는 전항의 규정에 의하여 서비스의 이용을 제한하거나 중지한 때에는 그 사유 및 제한기간 등을 회원에게 알려야 합니다.
+3. 회사가 제3항 및 제4항의 규정에 의하여 서비스 이용을 제한하거나 중지한 때에는 그 사유 및 제한기간 등을 회사 홈페이지 등을 통해 사전 공지하거나 이용자에게 통지합니다."
+
+제 7조 (서비스 이용요금)
+
+제 8조 (개인위치정보의 이용 또는 제공)
+"1. 팝풀은 개인위치정보를 이용하여 서비스를 제공하고자 하는 경우에는 미리 이용약관에 명시한 후 개인위치정보주체의 동의를 얻어야 합니다.
+2. 회원 및 법정대리인의 권리와 그 행사방법은 제소 당시의 이용자의 주소에 의하며, 주소가 없는 경우에는 거소를 관할하는 지방법원의 전속관할로 합니다. 다만, 제소 당시 이용자의 주소 또는 거소가 분명하지 않거나 외국 거주자의 경우에는 민사소송법상의 관할법원에 제기합니다.
+3. 팝풀은 회원의 민원처리를 위해 위치정보 이용 · 제공, 사실 확인자료를 자동 기록 · 보존하며, 고객불만 응대로 인하여 기록시점으로부터 1년간 보관합니다.
+4. 팝풀은 개인위치정보를 회원이 지정하는 제3자에게 제공하는 경우에는 개인위치정보를 수집한 당해 통신 단말장치로 매회 회원에게 제공받는 자, 제공 일시 및 제공목적을 즉시 통보합니다. 단, 아래 각 호의 1에 해당하는 경우에는 회원이 미리 특정하여 지정한 통신 단말장치 또는 전자우편주소로 통보합니다.
+  - 개인위치정보를 수집한 당해 통신단말장치가 문자, 음성 또는 영상의 수신기능을 갖추지 아니한 경우
+  - 회원이 온라인 게시 등의 방법으로 통보할 것을 미리 요청한 경우"
+
+제 9조 (개인위치정보의 이용 또는 제공의 제한)
+"팝풀은 회원의 동의가 있거나 다음 각 호의 어느 하나에 해당하는 경우를 제외하고는 개인위치정보 또는 위치정보 이용·제공사실 확인자료를 이용약관에 명시 또는 고지한 범위를 넘어 이용하거나 제3자에게 제공할 수 없습니다.
+1. 위치기반서비스의 제공에 따른 요금정산을 위하여 위치정보 이용·제공사실 확인자료가 필요한 경우
+2. 통계작성, 학술연구 또는 시장조사를 위하여 특정 개인을 알아볼 수 없는 형태로 가공하여 제공하는 경우"
+
+제 10조 (개인위치정보주체의 권리 및 행사방법)
+"1. 회원은 팝풀에 대하여 언제든지 개인위치정보를 이용한 위치기반서비스 제공 및 개인위치정보의 제3자 제공에 대한 동의의 전부 또는 일부를 철회할 수 있습니다. 이 경우 팝풀은 제공받은 개인위치정보 및 위치정보 이용, 제공사실 확인자료를 파기합니다. 단, 동의의 일부를 철회하는 경우에는 철회하는 부분의 개인위치정보 및 위치정보 이용·제공사실 확인자료에 한합니다.
+2. 회원은 팝풀에 대하여 언제든지 개인위치정보의 이용 또는 제공의 일시적인 중지를 요구할 수 있고, 팝풀은 이를 거절할 수 없으며 이를 위한 기술적 수단을 갖추고 있습니다.
+3. 회원은 팝풀에 대하여 아래 각 호의 자료에 대한 열람 또는 고지를 요구할 수 있고, 해당 자료에 오류가 있는 경우에는 그 정정을 요구할 수 있습니다. 이 경우 팝풀은 정당한 사유 없이 회원의 요구를 거절할 수 없습니다.
+  - 본인에 대한 위치정보 이용, 제공사실 확인자료
+  - 본인의 개인위치정보가 위치정보의 보호 및 이용 등에 관한 법률 또는 다른 법률 규정에 의하여 제3자에게 제공된 이유 및 내용
+4. 회원은 제1항 내지 제3항의 권리행사를 위해 소정의 절차를 통해 요구할 수 있습니다."
+
+제 11조 (위치정보관리책임자의 지정)
+"1. 팝풀은 위치정보를 적절히 관리, 보호하고 개인위치정보주체의 불만을 원활히 처리할 수 있도록 실질적인 책임을 질 수 있는 지위에 있는 자를 위치정보관리책임자로 지정해 운영합니다.
+2. 위치정보관리책임자는 위치기반서비스를 제공하는 부서의 부서장으로서 구체적인 사항은 본 약관의 부칙에 따릅니다."
+       
+       제 12조 (손해배상의 범위)
+1. 팝풀이 위치정보의보호및이용등에관한법률 제15조 내지 26조의 규정의 위반한 행위로 회원에게 손해가 발생한경우회원은 팝풀에 대해 손해배상을 청구할 수 있습니다. 이 경우 팝풀은 고의 또는 과실이 없음을 입증하지 아니하면 책임을 면할 수 없습니다.
+2. 회원이 본 약관의 규정을 위반하여 팝풀에 손해가 발생한 경우 회사는 회원에 대해 손해배상을 청구할 수 있습니다. 이 경우 회원은 고의 또는 과실이 없음을 입증하지 아니하면 책임을 면할 수 없습니다."
+       
+       제 13조 (면책)
+1. 팝풀은 다음 각 호의 경우로 서비스를 제공할 수 없는 경우 이로 인하여 회원에게 발생한 손해에 대해서는 책임을 부담하지 않습니다.
+  - 천재지변 또는 이에 준하는 불가항력의 상태가 있는 경우
+  - 서비스 제공을 위하여 팝풀과 서비스 제휴계약을 체결한 제 3자의 고의적인 서비스 방해가 있는 경우
+  - 회원의 귀책사유로 서비스 이용에 장애가 있는 경우
+  - 제1호 내지 제3호를 제외한 기타 회사의 고의, 과실이 없는 사유로 인한 경우
+2. 팝풀은 서비스 및 서비스에 게재된 정보, 자료, 사실의 신뢰도, 정확성 등에 대해서는 보증을 하지 않으며 이로 인해 발생한 회원의 손해에 대하여는 책임을 부담하지 아니합니다."
+
+제 14조 (규정의 준용)
+"1. 본 약관은 대한민국법령에 의하여 규정되고 이행됩니다.
+2. 본 약관에 규정되지 않은 사항에 대해서는 관계법령 및 상관습에 의합니다."
+
+제 15조 (분쟁의 조정 및 기타)
+"1. 팝풀은 위치정보와 관련된 분쟁에 대해 당사자간 협의가 이루어지지 아니하거나 협의를 할 수 없는 경우에는 위치정보의 보호 및 이용 등에 관한 법률 제28조 규정에 의한 방송통신위원회에 재정을 신청할 수 있습니다.
+2. 위치정보와 관련된 분쟁에 대해 당사자간 협의가 이루어지지 아니하거나 협의를 할 수 없는 경우에는 개인정보보호법 제43조 규정에 의한 개인정보분쟁조정위원회에 조정을 신청할 수 있습니다."
+
+제 16조 (회사의 연락처)
+"팝풀의 상호 및 연락처는 다음과 같습니다.
+  - 상 호 : 팝풀
+  - 이메일 주소 : service.poppool@gmail.com"
+부칙    -    "- 공고일자 : 2025.02.01
+- 시행일자 : 2025.02.01"
+
+</string>
 </dict>
 </plist>
+
+
+
+
