--- a/Poppool/Poppool/Resource/Info.plist
+++ b/Poppool/Poppool/Resource/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>사진을 업로드하거나 프로필 사진을 설정하기 위해 카메라를 사용합니다.</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
