--- a/Poppool/Poppool/Resource/Info.plist
+++ b/Poppool/Poppool/Resource/Info.plist
@@ -21,6 +21,7 @@
 		<string>nmap</string>
 		<string>kakaomap</string>
 		<string>tmap</string>
+		<string>maps</string>
 	</array>
 	<key>UIAppFonts</key>
 	<array>
