[FIX]: kakao 로그인 시 앱 사용을 위한 Schemes 추가

--- a/Poppool/Poppool/Resource/Info.plist
+++ b/Poppool/Poppool/Resource/Info.plist
@@ -22,6 +22,8 @@
 		<string>kakaomap</string>
 		<string>tmap</string>
 		<string>maps</string>
+		<string>kakaokompassauth</string>
+		<string>kakaotalk</string>
 	</array>
 	<key>UIAppFonts</key>
 	<array>
