--- a/Poppool/Poppool/Resource/Info.plist
+++ b/Poppool/Poppool/Resource/Info.plist
@@ -2,6 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>KAKAO_AUTH_APP_KEY</key>
+	<string>${KAKAO_AUTH_APP_KEY}</string>
+	<key>POPPOOL_BASE_URL</key>
+	<string>${POPPOOL_BASE_URL}</string>
+	<key>POPPOOL_S3_BASE_URL</key>
+	<string>${POPPOOL_S3_BASE_URL}</string>
+	<key>POPPOOL_API_KEY</key>
+	<string>${POPPOOL_API_KEY}</string>
+	<key>NAVER_MAP_CLIENT_ID</key>
+	<string>${NAVER_MAP_CLIENT_ID}</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
