--- a/.github/workflows/ios-ci.yml
+++ b/.github/workflows/ios-ci.yml
@@ -17,6 +17,16 @@ jobs:
       - name: ✅ Checkout Repository  # 저장소 코드 체크아웃
         uses: actions/checkout@v4
 
+      - name: 🧾 Generate Debug.xcconfig
+        run: |
+          cat <<EOF > Poppool/Poppool/Resource/Debug.xcconfig
+          KAKAO_AUTH_APP_KEY=${{ secrets.KAKAO_AUTH_APP_KEY }}
+          NAVER_MAP_CLIENT_ID=${{ secrets.NAVER_MAP_CLIENT_ID }}
+          POPPOOL_BASE_URL=${{ secrets.POPPOOL_BASE_URL }}
+          POPPOOL_S3_BASE_URL=${{ secrets.POPPOOL_S3_BASE_URL }}
+          POPPOOL_API_KEY=${{ secrets.POPPOOL_API_KEY }}
+          EOF
+
       - name: 🔨 Select Xcode 16.2  # Xcode 16.2 버전 사용 설정
         run: sudo xcode-select -s /Applications/Xcode_16.2.app
 
