--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,53 @@
-name: Run CI
+name: CI
 
 on:
   pull_request:
-    branches: [dev]  # dev 브랜치로의 PR에 대해 실행
+    branches: [dev]
   push:
-    branches: [dev]  # dev 브랜치로의 push에 대해 실행
+    branches: [dev]
 
 jobs:
-  build:
-    name: Build & Lint Workflow
+  autocorrect:
+    name: 🤖 Autocorrect Workflow
     runs-on: macos-15  # 최신 macOS 15 환경에서 실행
-    timeout-minutes: 15  # 최대 실행 시간 15분 설정
+    if: github.actor != 'github-actions[bot]'  # Actions 봇 커밋은 무시
+
+    steps:
+      - name: 📁 Checkout Repository  # 저장소 코드 체크아웃
+        uses: actions/checkout@v4
+
+      - name: 🛠️ Set up Xcode  # Xcode 16.2 선택
+        run: sudo xcode-select -s /Applications/Xcode_16.2.app
+
+      - name: ⬇️ Install SwiftLint  # SwiftLint 설치
+        run: brew install swiftlint
+
+      - name: 🎨 Run SwiftLint Autocorrect  # SwiftLint 자동 수정 실행
+        run: swiftlint autocorrect
+
+      - name: 🚀 Commit and Push Changes  # 변경 사항 자동 커밋 및 푸시
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          BRANCH_NAME="${GITHUB_REF_NAME}"
+          if [[ "$BRANCH_NAME" =~ (#([0-9]+)) ]]; then
+            ISSUE_NUMBER="${BASH_REMATCH[1]}"
+          else
+            ISSUE_NUMBER="#??"
+          fi
+
+          if [ -n "$(git status --porcelain)" ]; then
+            git add .
+            git commit -m "style/${ISSUE_NUMBER}: Apply SwiftLint autocorrect"
+            git push
+          else
+            echo "No changes to commit"
+          fi
+
+  build:
+    name: 🏗️ Build Workflow
+    runs-on: macos-15  # 최신 macOS 15 환경에서 실행
     if: github.actor != 'github-actions[bot]'  # Actions 봇 커밋은 무시
 
     steps:
@@ -32,7 +69,7 @@ jobs:
 
       - name: ⬇️ Install SwiftLint  # SwiftLint 설치
         run: brew install swiftlint
-
+        
       - name: 🎨 Run SwiftLint  # SwiftLint 코드 스타일 검사 실행
         run: swiftlint
 
