fix/#93: 린트 자동수정 명령어 수정

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         run: brew install swiftlint
 
       - name: 🎨 Run SwiftLint Autocorrect  # SwiftLint 자동 수정 실행
-        run: swiftlint autocorrect
+        run: swiftlint --fix
 
       - name: 🚀 Commit and Push Changes  # 변경 사항 자동 커밋 및 푸시
         run: |
