--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,10 +30,11 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
+          git fetch origin "${GITHUB_HEAD_REF}:${GITHUB_HEAD_REF}"
           git checkout "${GITHUB_HEAD_REF}"
 
           BRANCH_NAME="${GITHUB_HEAD_REF}"
-          if [[ "$BRANCH_NAME" =~ ([0-9]+) ]]; then
+          if [[ "$BRANCH_NAME" =~ \#([0-9]+) ]]; then
             ISSUE_NUMBER="${BASH_REMATCH[1]}"
           else
             ISSUE_NUMBER=""
