--- a/.github/workflows/deploy_on_release.yml
+++ b/.github/workflows/deploy_on_release.yml
@@ -78,7 +78,7 @@ jobs:
             cp "./$PROVISION" "$HOME/Library/MobileDevice/Provisioning Profiles/$UUID.mobileprovision"
           done
           
-      - name: 🔢 Set Build Number to datetime
+      - name: 🔢 Set Build Number # 빌드 번호 자동 수정
         run: |
           BUILD_NUMBER=$(date +%Y%m%d%H%M)
           /usr/libexec/PlistBuddy -c "Set :CFBundleVersion $BUILD_NUMBER" Poppool/Poppool/ResourceInfo.plist
