--- a/.github/workflows/deploy_on_release.yml
+++ b/.github/workflows/deploy_on_release.yml
@@ -81,7 +81,13 @@ jobs:
       - name: 🔢 Set Build Number # 빌드 번호 자동 수정
         run: |
           BUILD_NUMBER=$(date +%Y%m%d%H%M)
-          /usr/libexec/PlistBuddy -c "Set :CFBundleVersion $BUILD_NUMBER" Poppool/Poppool/Resource/Info.plist
+          PLIST_PATH="Poppool/Poppool/Resource/Info.plist"
+          
+          if /usr/libexec/PlistBuddy -c "Print :CFBundleVersion" "$PLIST_PATH"; then
+            /usr/libexec/PlistBuddy -c "Set :CFBundleVersion $BUILD_NUMBER" "$PLIST_PATH"
+          else
+            /usr/libexec/PlistBuddy -c "Add :CFBundleVersion string $BUILD_NUMBER" "$PLIST_PATH"
+          fi
           
       - name: ⬇️ Archive app # 빌드 및 아카이브
         run: |
