fix/#103: agvtool을 이용해서 빌드 범프를 하도록 수정
- Bundle version이 CFBundleVersion을 따르지 않았음
- Info를 기반으로 pbxproj를 수정하는 방식은 옳지 않다 생각했음
- 커스텀된 빌드 버전 넘버링을 버리고 agvtool을 이용하도록 수정

--- a/.github/workflows/deploy_on_release.yml
+++ b/.github/workflows/deploy_on_release.yml
@@ -36,6 +36,9 @@ jobs:
       - name: 🛠️ Set up Xcode  # Xcode 16.2 선택
         run: sudo xcode-select -s /Applications/Xcode_16.2.app
         
+      - name: 📈 Bump Bundle Version   # agvtool을 사용하여 번들 버전을 자동 증가시킴
+        run: agvtool next-version
+        
       - name: ⚙️ Generate xcconfig
         run: |
           cat <<EOF > Poppool/Poppool/Resource/Debug.xcconfig
