--- a/Poppool/Poppool/Resource/Info.plist
+++ b/Poppool/Poppool/Resource/Info.plist
@@ -16,7 +16,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>250410.3</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>KAKAO_AUTH_APP_KEY</key>
 	<string>${KAKAO_AUTH_APP_KEY}</string>
 	<key>LSApplicationQueriesSchemes</key>
