fix/#103: 야랄 커밋 시작함
- agvtool을 실행하기 위해 프로젝트 파일이 있는 경로로 이동하도록 수정

--- a/.github/workflows/deploy_on_release.yml
+++ b/.github/workflows/deploy_on_release.yml
@@ -37,7 +37,9 @@ jobs:
         run: sudo xcode-select -s /Applications/Xcode_16.2.app
         
       - name: 📈 Bump Bundle Version   # agvtool을 사용하여 번들 버전을 자동 증가시킴
-        run: agvtool next-version
+        run: |
+          cd Poppool
+          agvtool next-version
         
       - name: ⚙️ Generate xcconfig
         run: |
