--- a/Poppool/.swiftlint.yml
+++ b/Poppool/.swiftlint.yml
@@ -10,6 +10,7 @@ disabled_rules:
     - identifier_name
     - cyclomatic_complexity
     - redundant_optional_initialization
+    - function_parameter_count
 
 # 기본(default) 룰이 아닌 룰들을 활성화
 opt_in_rules:
