--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+# Cursor
+Poppool/buildServer.json
