chore/#150: .gitignore 수정

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+# Cursor
+Poppool/buildServer.json
+.vscode/*
+
