--- a/.github/workflows/deploy_on_release.yml
+++ b/.github/workflows/deploy_on_release.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: macos-15  # 최신 macOS 15 환경에서 실행
     env:
       # app archive 및 export 에 쓰일 환경 변수 설정
-      XC_PROJECT: Poppool/Poppool.xcodeproj
+      XC_WORKSPACE: Poppool/Poppool.xcworkspace
       XC_SCHEME: Poppool
       XC_ARCHIVE: Poppool.xcarchive
       
@@ -90,7 +90,7 @@ jobs:
           
       - name: ⬇️ Archive app # 빌드 및 아카이브
         run: |
-          xcodebuild clean archive -project $XC_PROJECT -scheme $XC_SCHEME -configuration release -archivePath $XC_ARCHIVE
+          xcodebuild clean archive -project $XC_WORKSPACE -scheme $XC_SCHEME -configuration release -archivePath $XC_ARCHIVE
           
       - name: ⬆️ Export app # export 를 통해 ipa 파일 만듦
         run: |
